fix double border on columns image placeholder

--- a/src/css/builder/core/builder.css
+++ b/src/css/builder/core/builder.css
@@ -418,6 +418,7 @@
 	width: 100%;
 	height: 220px;
 	border: 1px solid #dfdfdf;
+    border-bottom: 0;
 	background-color: #fafafa;
 	background-position: center;
 	background-size: cover;
